[gd_scene load_steps=7 format=3 uid="uid://b5uucg08n6mr3"]

[ext_resource type="Script" uid="uid://db8ofla4gwff8" path="res://ui/enemy_alert_ui.gd" id="1_e3u25"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e3u25"]
bg_color = Color(0.6455514, 1.8289685e-06, 3.3691526e-07, 1)
expand_margin_top = 33.0
shadow_color = Color(1, 0.29803923, 0, 0.6)
shadow_size = 20

[sub_resource type="Theme" id="Theme_27mrr"]
ProgressBar/styles/fill = SubResource("StyleBoxFlat_e3u25")

[sub_resource type="LabelSettings" id="LabelSettings_fbwwc"]
font_size = 30
font_color = Color(1, 0.6390508, 0.32651377, 1)
outline_size = 12
outline_color = Color(1, 0.28627452, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_e3u25"]
font_size = 32
outline_size = 4
shadow_color = Color(1, 1, 1, 0.3529412)
shadow_offset = Vector2(4.35, -1.26)

[sub_resource type="Theme" id="Theme_e3u25"]

[node name="caution" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_27mrr")
script = ExtResource("1_e3u25")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -99.0
offset_right = 99.0
offset_bottom = 111.0
grow_horizontal = 2

[node name="ColorRect" type="ColorRect" parent="PanelContainer"]
layout_mode = 2
color = Color(0.13682577, 0.13682574, 0.13682571, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/ColorRect"]
layout_mode = 0
offset_right = 198.0
offset_bottom = 111.0

[node name="CautionLabel" type="Label" parent="PanelContainer/ColorRect/VBoxContainer"]
layout_mode = 2
text = "CAUTION"
label_settings = SubResource("LabelSettings_fbwwc")
horizontal_alignment = 1

[node name="TimerLabel" type="Label" parent="PanelContainer/ColorRect/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_e3u25")
horizontal_alignment = 1

[node name="CombatLabel" type="Label" parent="PanelContainer/ColorRect/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_e3u25")
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 541.0
offset_right = 546.0
offset_bottom = 111.0
theme = SubResource("Theme_e3u25")
color = Color(1, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 734.0
offset_right = 739.0
offset_bottom = 111.0
theme = SubResource("Theme_e3u25")
color = Color(1, 0, 0, 1)

[node name="ColorRect3" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 546.0
offset_top = 5.0
offset_right = 551.0
offset_bottom = 192.79962
rotation = 4.712389
theme = SubResource("Theme_e3u25")
color = Color(1, 0, 0, 1)

[node name="ColorRect4" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 546.0
offset_top = 111.0
offset_right = 551.0
offset_bottom = 298.79962
rotation = 4.712389
theme = SubResource("Theme_e3u25")
color = Color(1, 0, 0, 1)
